Bug 240107 - Tabbing in the date field moves across the date field instead of advancing to amount field
Summary: Tabbing in the date field moves across the date field instead of advancing to...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-30 17:55 UTC by Brian
Modified: 2010-05-31 18:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brian 2010-05-30 17:55:34 UTC
Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

When using tab to move between fields for data entry, using tab in the date field has a different behavior and moves across the date field (that is, moving from month to day to year) instead of changing to the next field in the tab order.

Reproducible: Always

Steps to Reproduce:
Tab into the date field and then tab some more.

Actual Results:  
tab moves within the field instead of changing to the next field in the tab order

Expected Results:  
tab should move to the next field in the tab order

This is a change in behavior over KMM2 and requires additional keystrokes for data entry.
Comment 1 Thomas Baumgart 2010-05-31 18:48:07 UTC
SVN commit 1132885 by tbaumgart:

Using TAB/Shift+TAB jumps to next edit field not next section inside date entry widget

BUG: 240107

 M  +0 -9      kmymoneydateinput.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1132885