Using TAB/Shift+TAB jumps to next edit field not next section inside date entry widget

BUG: 240107

svn path=/trunk/kdereview/kmymoney/; revision=1132885